--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-remove-nonjs": "^0.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "compress": "^0.99.0",
     "connected-react-router": "^6.6.1",
     "cors": "^2.8.5",
@@ -17,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mysql2": "^2.1.0",
+    "node-sass-chokidar": "^1.4.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-calendar": "^2.19.2",
@@ -36,8 +43,10 @@
     "twilio": "^3.39.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server",
+    "build-css": "./node_modules/.bin/node-sass-chokidar src/ -o src/",
     "build": "react-scripts build",
+    "build-server": "babel src -s -D -d webserver --plugins remove-nonjs --presets es2015,stage-0,react",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
