--- a/package.json
+++ b/package.json
@@ -64,5 +64,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "engines":{"node": "12.13.0"}, 
 }
