--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "compress": "^0.99.0",
     "connected-react-router": "^6.6.1",
+    "contentful": "^7.14.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express-validation": "^1.0.3",
@@ -65,5 +66,7 @@
     ]
   },
   "proxy": "http://localhost:8080",
-  "engines":{"node": "12.13.0"}
+  "engines": {
+    "node": "12.13.0"
+  }
 }
