--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connected-react-router": "^6.6.1",
     "contentful": "^7.14.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express-validation": "^1.0.3",
     "helmet": "^3.21.2",
