--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express-validation": "^1.0.3",
+    "google-spreadsheet": "^3.0.11",
     "helmet": "^3.21.2",
     "i18next": "^19.0.3",
     "joi": "^14.3.1",
