--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express-validation": "^1.0.3",
-    "got": "^11.1.4",
     "google-spreadsheet": "^3.0.11",
+    "got": "^11.1.4",
     "helmet": "^3.21.2",
     "i18next": "^19.0.3",
     "joi": "^14.3.1",
@@ -44,7 +44,8 @@
     "redux-actions": "^2.6.5",
     "request": "^2.88.0",
     "sequelize": "^5.21.3",
-    "twilio": "^3.39.4"
+    "twilio": "^3.39.4",
+    "universal-analytics": "^0.4.20"
   },
   "scripts": {
     "start": "react-scripts start",
