--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
@@ -13,38 +13,38 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "compress": "^0.99.0",
-    "connected-react-router": "^6.6.1",
-    "contentful": "^7.14.0",
+    "connected-react-router": "^6.9.1",
+    "contentful": "^7.15.2",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express-validation": "^1.0.3",
-    "google-spreadsheet": "^3.0.11",
-    "got": "^11.1.4",
-    "helmet": "^3.21.2",
-    "i18next": "^19.0.3",
+    "google-spreadsheet": "^3.1.15",
+    "got": "^11.8.2",
+    "helmet": "^3.23.3",
+    "i18next": "^19.9.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "mysql2": "^2.1.0",
+    "moment": "^2.29.1",
+    "mysql2": "^2.3.0",
     "node-sass-chokidar": "^1.4.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.6.3",
     "react-calendar": "^2.19.2",
-    "react-datepicker": "^2.11.0",
-    "react-dom": "^16.12.0",
+    "react-datepicker": "^2.16.0",
+    "react-dom": "^16.14.0",
     "react-google-charts": "^3.0.15",
-    "react-i18next": "^11.3.1",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
+    "react-i18next": "^11.11.4",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.3.0",
-    "react-select": "^3.0.8",
-    "react-tabs": "^3.1.0",
-    "redux": "^4.0.5",
+    "react-select": "^3.2.0",
+    "react-tabs": "^3.2.2",
+    "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
-    "request": "^2.88.0",
-    "sequelize": "^5.21.3",
-    "twilio": "^3.39.4",
+    "request": "^2.88.2",
+    "sequelize": "^5.22.4",
+    "twilio": "^3.67.1",
     "universal-analytics": "^0.4.20"
   },
   "scripts": {
